# mpadao-template

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.claude/: settings.json
.claude/agents/: benchmark-analyst.md  build-doctor.md  code-docs-writer.md  issue-researcher.md
.claude/skills/build-test/: SKILL.md
.claude/skills/bump-version/: SKILL.md
.claude/skills/check-ci/: SKILL.md
.claude/skills/fix-issue/: SKILL.md
.claude/skills/scaffold-app/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflow/: cmake.yml
.github/workflows/: claude.yml  cmake.yml
benchmark/: CMakeLists.txt
benchmark/accuracy/: CMakeLists.txt  main.cpp
benchmark/convergence/: CMakeLists.txt  main.cpp
benchmark/performance/: CMakeLists.txt  main.cpp
benchmark/precision/: CMakeLists.txt  main.cpp
docker/: Dockerfile  Dockerfile.clang11builder  Dockerfile.clang12builder  Dockerfile.clang13builder  Dockerfile.clang14builder  Dockerfile.clang15builder  Dockerfile.gcc10builder  Dockerfile.gcc11builder  Dockerfile.gcc12builder  Dockerfile.gcc9builder  bla  build.sh  build_build_containers.sh  build_gcc12.sh
docs/: claude-code-automation-assessment.md  docker-development.md
docs/plans/: claude-code-assessment.md  migrate-mtl4-to-mtl5.md
src/: CMakeLists.txt  semver.cpp
src/algorithms/: binary_splitting.hpp  karatsuba.hpp
src/app/: CMakeLists.txt
src/apps/constants/: CMakeLists.txt  constants.cpp
src/apps/high-precision/chudnovsky/: CMakeLists.txt  main.cpp
src/apps/high-precision/digits_of_pi/: CMakeLists.txt  main.cpp
src/apps/high-precision/karatsuba/: CMakeLists.txt  main.cpp
src/apps/logging/: CMakeLists.txt  main.cpp
src/apps/mixed-precision/polynomial/: CMakeLists.txt  areals.cpp  fixpnts.cpp  integers.cpp  logs.cpp  posits.cpp
src/apps/mixed-precision/quadratic/: CMakeLists.txt  quadratic.cpp
src/apps/mixed-precision/universal/: main.cpp
src/apps/polynomial/: CMakeLists.txt  cfloats.cpp  main.cpp  unums.cpp
src/apps/quadratic/: CMakeLists.txt  quadratic.cpp
src/apps/universal/: CMakeLists.txt  main.cpp
src/lib/version/: CMakeLists.txt  version.cpp  version.hpp  version_config.hpp.in
src/mtl4ext/: norms.hpp
src/mtl4ext/generators/: matrix_generators.hpp
src/mtl4ext/utils/: print_utils.hpp  vector_utils.hpp
src/mtlext/: mtl_extensions.hpp  norms.hpp
src/mtlext/generators/: matrix_generators.hpp
src/mtlext/utils/: print_utils.hpp
src/quadratic/: CMakeLists.txt
src/solvers/: CMakeLists.txt  gauss_jordan.cpp
src/tools/semver/: CMakeLists.txt  semver.cpp
src/universal/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: mpadao_tests.cpp
